# unknown_unknown_with_fable5

./: Agent.md  EXPERIMENTS.md  PLAN.md  README.md  SPEC.md  pyproject.toml
diffsr/: __init__.py  config.py  pipeline.py  train.py
diffsr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diffsr/data/: __init__.py  generator.py
diffsr/eval/: __init__.py  baselines.py  benchmarks.py  metrics.py
diffsr/expressions/: __init__.py  grammar.py  sympy_bridge.py  tokenizer.py  tree.py
diffsr/fit/: __init__.py  constants.py
diffsr/model/: __init__.py  denoiser.py  diffusion.py  embedding.py  encoder.py
gpt55review/: gpt55review_on_M7.md
paper/: PAPER.md  make_figures.py
results/: feynman.json  feynman.md  feynman_k128.json  feynman_k128.md  nguyen.json  nguyen.md
runs/proto3var/: config.json  indist_k32.json  indist_k8.json  losses.json
runs/tiny1var/: config.json  losses.json  model.pt
scripts/: eval_indist.py  evaluate.py  run_benchmark.py  train.py
tests/: test_constants_fit.py  test_diffusion.py  test_e2e_tiny.py  test_generator.py  test_tokenizer.py
